--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -166,7 +166,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                             </div>
                             <div class="committee-title-wrapper">
                                 <h3 class="committee-title">AUDIT COMMITTEE</h3>
-                                <p class="committee-head">Led by: Tim van den Berg</p>
+                                <p class="committee-head">Led by: Herman Skledar</p>
                             </div>
                         </div>
                         <div class="committee-content">
@@ -355,7 +355,7 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
         prevBtn.addEventListener('click', prevTestimonial);
 
         // Auto-advance every 5 seconds
-        setInterval(nextTestimonial, 10000);
+        setInterval(nextTestimonial, 20000);
     </script>
     </body>
 </html>
