--- a/src/pages/become-a-member.astro
+++ b/src/pages/become-a-member.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import MembershipBenefits from '../components/MembershipBenefits.astro';
 import MembershipSteps from '../components/MembershipSteps.astro';
-import MembershipFAQ from '../components/MembershipFAQ.astro';
+import SimplifiedFAQ from '../components/SimplifiedFAQ.astro';
 import MembershipCTA from '../components/MembershipCTA.astro';
 import '../styles/pages/membership.css';
 ---
@@ -96,10 +96,7 @@ import '../styles/pages/membership.css';
             </section>
 
             <!-- FAQ Section -->
-            <section class="section">
-                <h2 class="section-title centered-title">FREQUENTLY ASKED QUESTIONS</h2>
-                <MembershipFAQ />
-            </section>
+            <SimplifiedFAQ />
 
             <!-- CTA Box -->
             <MembershipCTA />
