--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -52,7 +52,7 @@ import '..//../styles/pages/powerlifting.css';
                         </div>
                     </div>
                     <div class="about-image">
-                        <img src="/api/placeholder/500/300" alt="Spartacus Powerlifting">
+                        <img src="\images\Strenghtsports_team.png" alt="Spartacus Powerlifting">
                     </div>
                 </div>
             </div>
